daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N20_missing_required_log/T1.hex
86781b6461796c696768742e617574682e7472616e7363726970742e763658403907048cbb2bba166b0014aedd7db907fdeaa0205969e89ef4726051c95581bd206921a511765a2d2d0a901f34a2d506d9e1eadb4d2daa8f574eba5068d928c658402c6db589d6ccb2062e357a82d9350961934e705013bbcef2d917095d664d1df78908a092c7125ab46573d5560c7c09f1e5334325ede7ca7be9c0bd34957d372d5840b0e480bf268e9d1bafe64a75d474507066822190a162795f8badac98d52c22e6140b779b007dadf803c4ed2f69fe948ffa6c8e49d6438ae92f432701d4210ba458201f2a08e66d533846d0c3fa748ac9c7a76144f802ba13529cabf21b38fc8b8643584006e160e72f3d521d50d3ed069f6317dfebfd40bdc798e5eaa4b2902e0b414853e06b36fa48b966e865db0d6caec5a804a48d7963d6922f01438587a7b32db712
